<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".StudentHomeActivity">


    <ImageView
        android:id="@+id/bottom_black_bar"
        android:layout_width="420dp"
        android:layout_height="80dp"
        android:contentDescription="@string/bottom_screen_task_bar_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <ImageView
        android:id="@+id/top_black_bar"
        android:layout_width="420dp"
        android:layout_height="64dp"
        android:contentDescription="@string/top_screen_task_bar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark" />

    <ImageButton
        android:id="@+id/comment_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/comment_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dislike_button"
        app:srcCompat="@drawable/ic_baseline_add_comment_24" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/home_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/like_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageButton
        android:id="@+id/dislike_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/dislike_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/comment_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/midlike_button"
        app:srcCompat="@drawable/ic_baseline_thumb_down_alt_24"
        app:tint="@color/dislike_button_tint_color" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/like_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/midlike_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
        app:tint="@color/like_button_tint_color" />

    <ImageButton
        android:id="@+id/midlike_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/okay_like_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislike_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/like_button"
        app:srcCompat="@drawable/ic_baseline_thumbs_up_down_24"
        app:tint="@color/midlike_button_tint_color" />

    <ImageButton
        android:id="@+id/post_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/black"
        android:contentDescription="@string/add_video_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/top_black_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_video_call_24" />

    <ImageButton
        android:id="@+id/computer_class_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:background="@color/black"
        android:contentDescription="@string/view_classes_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/top_black_bar"
        app:layout_constraintEnd_toStartOf="@+id/post_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_computer_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/student_textView"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/top_black_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>